test/fails/bad_casts/basics3.lgl
tag coord a is vec2;
tag coord b is vec2;

void main() {
    a->b a_b = [[1., 2.], [2., 1.]];
    b bvec = [1., 2.];
    a fail = bvec in a; //backwards, no path cause we can't use inverses
}